# fhws_dm_mmt

./: Bitstream.cpp  Bitstream.h  CMakeLists.txt  HoffmanCode.cpp  HoffmanCode.h  Jpeg.cpp  Jpeg.h  Ppm.cpp  Ppm.h  RGBPixel.cpp  RGBPixel.h  YCbCrPixel.cpp  YCbCrPixel.h  main.cpp  main.h
DCT/: DctArai.cpp  DctArai.h  DctDirect.cpp  DctDirect.h  DctSeparate.cpp  DctSeparate.h  DiscreteCosineTransformation.cpp  DiscreteCosineTransformation.h
Huffman/: Tree.cpp  Tree.h  TreeElement.cpp  TreeElement.h  TreeNode.cpp  TreeNode.h
